# Include core sources and headers
sources = files(
  'adapter/device_adapter_api.cpp',
  'bindings/config_converter.cpp',
  'bindings/driver.cpp',
  'bindings/evolver.cpp',
  'functional/monad/serializer.cpp',
  'io/console/statistics.cpp',
  'io/exceptions.cpp',
  'io/tabulate/table.cpp',
  'math/evaluator.cpp',
  'math/exp_load.cpp',
  'math/linearize.cpp',
  'physics/em/contact.cpp',
  'physics/hydro/ib/factory.cpp',
  'physics/hydro/ib/system_serialization.cpp',
  'utility/helpers.cpp',
)
